--- a/Oblig-1-ITPE3200/wwwroot/index.html
+++ b/Oblig-1-ITPE3200/wwwroot/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Diseasecalculator</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="js/index.js"></script>
 </head>
 <body>
