--- a/Oblig-1-ITPE3200/wwwroot/index.html
+++ b/Oblig-1-ITPE3200/wwwroot/index.html
@@ -17,7 +17,7 @@
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./admin.html">Admin</a>
+                        <a class="nav-link active" aria-current="page" href="./login.html">Admin</a>
                     </li>
                 </ul>
             </div>
