--- a/Oblig-1-ITPE3200/wwwroot/login.html
+++ b/Oblig-1-ITPE3200/wwwroot/login.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <title>Login</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="js/login.js"></script>
     <script src="js/validate.js"></script>
 </head>
@@ -24,10 +24,12 @@
                 <span id="errPass" style="color:red;"></span>
             </div>
             <div class="form-group">
-                <button class="btn btn-primary" onclick="logIn()">Log in</button>
+                <button type="button" class="btn btn-primary" onclick="logIn()">Log in</button>
             </div>
             <span id="err" style="color:red;"></span>
         </form>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
