--- a/Oblig-1-ITPE3200/wwwroot/admin.html
+++ b/Oblig-1-ITPE3200/wwwroot/admin.html
@@ -2,28 +2,29 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Oblig 1</title>
+    <title>Admin page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="js/admin.js"></script>
 </head>
 <body>
-    <h1>Oblig</h1>
-    <table class='table table-striped'>
-        <tr>
-            <th>Diseases</th>
-            <th>Symptoms</th>
-        </tr>
-        <tr>
-            <td id="diseases"></td>
-            <td id="symptoms"></td>
-        </tr>
-    </table>
-    <div id="err" style="color: red;">
-
-    </div>
     <div class="container">
-        <a class="btn btn-primary" href="index.html">Back</a>
+        <h1>Admin page</h1>
+        <button type="button" class="btn btn-danger" onclick="logOut()">Logout</button>
+        <table class='table table-striped'>
+            <tr>
+                <th>Diseases</th>
+                <th>Symptoms</th>
+            </tr>
+            <tr>
+                <td id="diseases"></td>
+                <td id="symptoms"></td>
+            </tr>
+        </table>
+        <div id="err" style="color: red;">
+
+        </div>
+        <a class="btn btn-secondary" href="index.html">Back</a>
     </div>
 </body>
 </html>
