--- a/Oblig-1-ITPE3200/wwwroot/index.html
+++ b/Oblig-1-ITPE3200/wwwroot/index.html
@@ -3,98 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Search</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" integrity="sha384-xeJqLiuOvjUBq3iGOjvSQSIlwrpqjSHXpduPd6rQpuiM3f5/ijby8pCsnbu5S81n" crossorigin="anonymous">
-    <script src="js/index.js"></script>
-    <script src="js/symptomstable.js"></script>
-    <style>
-        body {
-            padding-top: 4.5rem;
-        }
-    </style>
+    <title>Symptomkalkulator</title>
 </head>
 <body>
-    <!-- navbar code from bootstrap template https://getbootstrap.com/docs/5.2/examples/navbar-fixed/ -->
-    <nav class="navbar navbar-expand navbar-light bg-light border-bottom fixed-top">
-        <div class="container align-items-center">
-            <a class="navbar-brand mb-0 h1" href="index.html"><i class="bi bi-calculator"></i> Symptomkalkulator</a>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="login.html">Admin</a>
-                    </li>
-
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <!-- end of navbar -->
-    <div class="container">
-
-        <header class="mb-3">
-            <h1 class="pb-2">Symptomkalkulator</h1>
-            <p class="col-6">
-                Select one or more symptoms from the symptoms table below. Diseases with all the selected symptoms will be shown automatically.
-                Click on a selected symptom to deselect it. You may also search for symptoms by name.
-            </p>
-        </header>
-
-        <h5 class="pb-2">Matching diseases</h5>
-        <div id="results" class="p-3 border">
-            <div class="text-muted">No symptoms selected - please select one or more symptoms from the symptom list</div>
-        </div>
-        <div class="p-3 mb-3 border border-top-0 rounded-bottom bg-light">
-            <h6>Selected symptoms (click to deselect)</h6>
-            <div id="selectedsymptomsdiv">
-                <div class="text-muted">None</div>
-            </div>
-        </div>
-
-        <h5 class="pb-2">Symptoms list</h5>
-        <!-- search bar etc. -->
-        <div id="filters" class="p-3 border border-bottom-0 rounded-top bg-light">
-            <form class="form-inline row align-items-center" onsubmit="return false;">
-                <div class="col-4">
-                    <label for="searchBox" class="visually-hidden">Search for symptom</label>
-                    <input type="search" class="form-control" id="searchBox" placeholder="Enter symptom name" on>
-                </div>
-                <div class="col">
-                    <button type="submit" class="btn btn-primary" onclick="generateSymptomsList()">Search</button>
-                    <button type="button" class="btn btn-secondary" onclick="clearSearch()">Clear search</button>
-                </div>
-            </form>
-        </div>
-        <!-- output table -->
-        <div class="p-3 border">
-            <div id="symptoms">
-
-            </div>
-        </div>
-        <!-- paging -->
-        <div class="p-3 mb-3 border border-top-0 rounded-bottom bg-light">
-            <div class="row justify-content-start align-items-center">
-                <div class="col-auto">
-                    <ul class="pagination mb-0" id="pagenav">
-                    </ul>
-                </div>
-                <div class="col-auto">
-                    Results per page:
-                </div>
-                <div class="col-auto">
-                    <select class="form-select" aria-label="Default select example" onchange="generateSymptomsList()" id="pagesizeselect">
-                        <option value="5">5</option>
-                        <option selected value="10">10</option>
-                        <option value="20">20</option>
-                    </select>
-                </div>
-            </div>
-        </div>
-        <div id="#feil"></div>
-    </div>
+    How did you get here?
 </body>
 </html>
